--- a/inventory.tmpl
+++ b/inventory.tmpl
@@ -1,4 +1,4 @@
 [servers]
-%{ for index, ip in private-ip ~}
-${ip} ansible_host=${private-ip[index]}
+%{ for index, ip in instance-ip ~}
+${instance-name[index]} ansible_host=${instance-ip[index]}
 %{ endfor ~}
